Avoid squished chips when they're socketed.

--- a/css/game.css
+++ b/css/game.css
@@ -74,9 +74,12 @@ h1 {
 .socket {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 4.8rem;
   height: 4.8rem;
-  border: 2px solid currentColor;
+  box-shadow:
+    inset 0 0 0 2px currentColor
+  ;
 }
 .socket + .socket {
   margin-left: 1.5rem;
@@ -98,7 +101,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 0.1rem;
+  padding: 0.3rem;
 }
 .pad {
   display: flex;
@@ -121,7 +124,6 @@ h1 {
 .cutout {
   width: 1.5rem;
   height: 0.75rem;
-  margin-top: -2px;
   background: rgb(253,250,249);
   border-bottom-left-radius: 0.75rem;
   border-bottom-right-radius: 0.75rem;
